base/deployments/flash/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flash
  labels:
    name: flash
