base/deployments/flash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flash-deployment
  namespace: flash5
spec:
  replicas: 2
  minReadySeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: flash
  template:
    metadata:
      labels:
        app: flash
    spec:
      containers:
      - name: app-container
        image: us-east4-docker.pkg.dev/s69mr1c-frh-int-wm-main/applications/flash-app:latest
        ports:
        - containerPort: 8080
